--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
-    "react": "^19.0.0",
+    "react": "^18.0.0",
     "react-countup": "^6.5.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.1",
+    "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4"
   },
@@ -42,6 +43,7 @@
     "css-loader": "^7.1.2",
     "postcss": "^8.4.49",
     "postcss-loader": "^8.1.1",
+    "source-map-loader": "^5.0.0",
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.17"
   }
