--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^4.1.1",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
     "react-countup": "^6.5.3",
@@ -14,7 +15,8 @@
     "react-slick": "^0.30.3",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
-    "web-vitals": "^4.2.4"
+    "web-vitals": "^4.2.4",
+    "wow.js": "^1.2.2"
   },
   "scripts": {
     "clean": "rm -rf build",
