--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "animate.css": "^4.1.1",
     "cra-template": "1.2.0",
     "react": "^18.0.0",
@@ -13,6 +14,7 @@
     "react-router-dom": "^6.0.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
+    "react-time-picker": "^7.0.0",
     "react-tsparticles": "^2.12.2",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4",
