--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emailjs/browser": "^4.4.1",
     "animate.css": "^4.1.1",
     "cra-template": "1.2.0",
+    "lucide-react": "^0.475.0",
     "react": "^18.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.0.0",
